test/classes/bradc/setterForField.good
myC is: {x_field = 2}
myC is: {x_field = 3}
myC is: {x_field = -1}
setterForField.chpl:13: error: halt reached - x accessed when negative
